--- a/Module1/Report_M1.ipynb
+++ b/Module1/Report_M1.ipynb
@@ -1,5 +1,29 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Модуль А. Анализ и предобработка данных"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Импортирование библиотек"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# для "
+   ]
+  }
+ ],
  "metadata": {
   "language_info": {
    "name": "python"
